NEWS - OpenPrinting CUPS Filters v1.11.6 - 2016-10-31
-----------------------------------------------------

CHANGES IN V1.12.0

	- libcupsfilters, cups-browsed: Moved the PPD generator for
	  IPP network printers from cups-browsed to libcupsfilters, so
	  that it can also be used by other utilities.
	- cups-browsed: When auto-generating a PPD set the cost values
	  in the filter lines to give the highest priority to PDF,
	  then PWG Raster, Apple Raster, PCL-XL, PostScript, PCL 5c/e.
	- cups-browsed: Synced the PPD generator with the one of CUPS,
	  giving the best possible support for IPP Everywhere and
	  AirPrint printers. Especially support for more media types
	  and for finishing units got added. Also support for more
	  different ways to represent the printer capabilities via
	  IPP attributes got added.
	- cups-browsed: Added support for auto setup of IPP printers
	  understanding the Apple Raster input data format (.urf, on
	  AirPrint printers), only if CUPS 2.2.2 is used, which can
	  generate this format via its rastertopwg filter.
	- cups-browsed: Added new "NewIPPPrinterQueuesShared"
	  directive to cups-browsed.conf, which allows to decide
	  whether the auto-created local print queue for an newly
	  discovered IPP network printer will be shared or not. For
	  printers discovered earlier, cups-browsed remembers the
	  previous setting.
	- cups-browsed: If a user changes the printer-is-shared bit of
	  an auto-created print queue for an IPP network printer (not
	  for a remote CUPS queue), record this fact and recover the
	  change when creating this queue in the next session.
	- cups-browsed: For automatic creation of print queues for IPP
	  network printers also allow only creating queues for IPP
	  Everywhere printers, only for Apple Raster printers, or for
	  both printer types designed for driverless printing and not
	  only for all suitable printers, configurable via the
	  CreateIPPPrinterQueues directive in cups-browsed.conf.
