@@ -112,6 +112,16 @@ AC_SUBST(CUPS_SERVERBIN)
 AX_COMPARE_VERSION([$CUPS_VERSION],[gt],[1.4], [
 	AC_DEFINE(CUPS_1_4, 1, [CUPS Version is 1.4 or newer])
 ])
+
+AC_ARG_ENABLE([driverless], [AS_HELP_STRING([--disable-driverless], [enable PPD generator for driverless printing in /usr/lib/cups/drivers/.])],
+        [enable_driverless="$enableval"],
+        [enable_driverless=yes]
+)
+AX_COMPARE_VERSION([$CUPS_VERSION],[gt],[1.6], [
+	AM_CONDITIONAL([ENABLE_DRIVERLESS],
+	[test "x$enable_driverless" != "xno"])
+])
+
 AC_DEFINE(PDFTOPDF, [], [Needed for pdftopdf filter compilation])
 AC_DEFINE_DIR(BANNERTOPDF_DATADIR, "{CUPS_DATADIR}/data", [Directory where bannertopdf finds its data files (PDF templates)])
 
@@ -527,6 +537,11 @@ AC_ARG_WITH([acroread-path],
         [with_acroread_path="$withval"],
         [with_acroread_path=system]
 )
+AC_ARG_WITH([ippfind-path],
+        [AS_HELP_STRING([--with-ippfind-path=value], [Set path to ippfind binary (default: system).])],
+        [with_ippfind_path="$withval"],
+        [with_ippfind_path=system]
+)
 AC_ARG_WITH([pdftops-maxres],
 	[AS_HELP_STRING([--with-pdftops-maxres=value], [Set maximum image rendering resolution for pdftops filter (0, 75, 150, 300, 600, 1200, 2400, 4800, 90, 180, 360, 720, 1440, 2880, 5760, unlimited). Default: 1440])],
 	[with_pdftops_maxres="$withval"],
@@ -650,6 +665,11 @@ AS_IF([test "x$with_acroread_path" != "xsystem"], [
 AS_IF([test "x$CUPS_ACROREAD" != "x"], [
 	AS_IF([test x"$with_pdftops" = xacroread], [AC_DEFINE_UNQUOTED([CUPS_PDFTOPS_RENDERER], [ACROREAD], [Define default renderer])])
 ])
+AS_IF([test "x$with_ippfind_path" != "xsystem"], [
+	CUPS_IPPFIND="$with_ippfind_path"
+], [
+	CUPS_IPPFIND="ippfind"
+])
 
 AS_IF([test "x$CUPS_GHOSTSCRIPT" != "x" -a "x$CUPS_PDFTOPS" != "x"], [
 	AS_IF([test x"$with_pdftops" = xhybrid], [AC_DEFINE_UNQUOTED([CUPS_PDFTOPS_RENDERER], [HYBRID], [Define default renderer])])
@@ -660,6 +680,7 @@ AC_DEFINE_UNQUOTED([CUPS_MUTOOL],"$CUPS_MUTOOL",[mutool binary to use])
 AC_DEFINE_UNQUOTED([CUPS_POPPLER_PDFTOPS], "$CUPS_PDFTOPS", [pdftops binary to use.])
 AC_DEFINE_UNQUOTED([CUPS_POPPLER_PDFTOCAIRO], "$CUPS_PDFTOCAIRO", [pdftocairo binary to use.])
 AC_DEFINE_UNQUOTED([CUPS_ACROREAD], "$CUPS_ACROREAD", [acroread binary to use.])
+AC_DEFINE_UNQUOTED([CUPS_IPPFIND], "$CUPS_IPPFIND", [ippfind binary to use.])
 AC_DEFINE_UNQUOTED([CUPS_PDFTOPS_MAX_RESOLUTION], [$CUPS_PDFTOPS_MAXRES], [max resolution used for pdftops when converting images])
 
 # ==================
@@ -802,6 +823,7 @@ Build configuration:
 	gs-path:         ${with_gs_path}
 	mutool:          ${enable_mutool}
 	mutool-path:     ${with_mutool_path}
+	ippfind-path:    ${with_ippfind_path}
 	imagefilters:    ${enable_imagefilters}
 	jpeg:            ${with_jpeg}
 	pdftocairo-path: ${with_pdftocairo_path}
@@ -819,5 +841,6 @@ Build configuration:
 	werror:          ${enable_werror}
 	braille:	 ${enable_braille}
 	braille tables:  ${TABLESDIR}
+	driverless:      ${enable_driverless}
 ==============================================================================
 ])
